<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scViewNuevoCheckList"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="pe.dominiotech.movil.safe2biz.ops.fragment.OpsDetalleDatos">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/rllyNuevoCheckList"
        android:layout_height="wrap_content"
        android:background="@color/app_fondo_menu">

        <LinearLayout
            android:id="@+id/lnlyDatosGeneralesCheckList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:elevation="2dp">

            <LinearLayout
                android:id="@+id/lnlyInfoCheckList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:focusable="true" android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_fecha"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.6"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/Fecha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:hint="@string/fecha_y_hora"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColorHint="@color/tw__medium_gray"
                        android:textColor="@color/tw__medium_gray"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_empresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <AutoCompleteTextView
                        android:id="@+id/Empresa"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre_empresa"
                        android:lines="1"
                        android:maxLines="1"
                        android:textColorHint="@color/tw__medium_gray"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/Area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:hint="@string/area"
                    android:textSize="16sp"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/tw__medium_gray"
                    app:met_floatingLabelTextSize="16sp"
                    app:met_textColorHint="@color/tw__medium_gray"
                    app:met_underlineColor="@color/tw__medium_gray" />
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/Turno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:hint="@string/turno"
                    android:textSize="16sp"
                    app:met_floatingLabel="highlight"
                    app:met_floatingLabelTextColor="@color/tw__medium_gray"
                    app:met_floatingLabelTextSize="16sp"
                    app:met_textColorHint="@color/tw__medium_gray"
                    app:met_underlineColor="@color/tw__medium_gray" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnlyCamposUbicacionCheckListcabecera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_white_1000"
            android:orientation="vertical"
            android:layout_below="@id/lnlyDatosGeneralesCheckList"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/lnlyCamposUbicacionesCheckList2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="left"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvSubTitulo2CheckListCabecera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion"
                    android:textColor="@color/app_letra_tab"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/mapDetalle"
                    android:layout_gravity="center"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:layout_margin="10dp"
            android:theme="@style/AppTheme.Button"
            android:id="@+id/btnGuardar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lnlyCamposUbicacionCheckListcabecera"
            android:text="@string/guardar_detalle"
            android:enabled="false" />
    </RelativeLayout>

</ScrollView>