<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/md_white_1000"
    tools:context="pe.dominiotech.movil.safe2biz.base.activity.MenuActivity"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.76"
            android:orientation="vertical"
            android:gravity="left">

            <ImageView
                android:id="@+id/imgViewConfiguracion"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:paddingLeft="20dp"
                android:tint="@color/safe2biz_azul"
                android:src="@drawable/ic_configuracion"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/safe2biz_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/linearLayout">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="7dp"
                            android:src="@drawable/ic_account_box_white_24dp"
                            android:tint="@color/tw__medium_gray"/>
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                            <EditText
                                android:id="@+id/input_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/usuario"
                                android:maxLines="1"
                                android:lines="1"
                                android:text="demo@safe2biz_col"
                                android:textColorHint="@color/tw__medium_gray" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="7dp"
                            android:src="@drawable/ic_https_white_24dp"
                            android:tint="@color/tw__medium_gray"/>
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">


                            <EditText
                                android:id="@+id/input_pass"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:inputType="textPassword"
                                android:textColorHint="@color/tw__medium_gray"
                                android:hint="@string/contrasenia"
                                android:text="sdemo2015"
                                />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/linearButtonLayout"
                    android:layout_marginBottom="6dp"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/loginButton"
                        android:theme="@style/AppTheme.Button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/iniciarsesion"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    style="@style/AppNormalFont"
                    android:id="@+id/versionText"
                    android:layout_above="@+id/empresaText"
                    android:textColor="@color/md_black_1000_50"/>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>
